[gd_scene load_steps=16 format=3 uid="uid://fk70sfm00807"]

[ext_resource type="Script" path="res://scenes/objects/player.gd" id="1_b13mb"]
[ext_resource type="PackedScene" uid="uid://do3w40jold7fh" path="res://components/velocity_component.tscn" id="2_skt05"]
[ext_resource type="PackedScene" uid="uid://dghe6tn3spd65" path="res://components/health_component.tscn" id="2_usdq0"]
[ext_resource type="PackedScene" uid="uid://dnb78nk8mopm5" path="res://components/hurtbox_component.tscn" id="3_3n47h"]
[ext_resource type="Texture2D" uid="uid://868dfklqij3g" path="res://assets/player_walking_down.png" id="3_rrdxx"]
[ext_resource type="Texture2D" uid="uid://dasjj301gkgs3" path="res://assets/player_walking_up.png" id="4_fatym"]
[ext_resource type="Texture2D" uid="uid://uh5p0uxq10ft" path="res://assets/player_walking_side.png" id="5_ptdvp"]
[ext_resource type="PackedScene" uid="uid://rkjcmjh3ld7y" path="res://components/show_interactable_component.tscn" id="8_hoaqu"]

[sub_resource type="Animation" id="Animation_0ml67"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_rrdxx")]
}

[sub_resource type="Animation" id="Animation_r3n0o"]
resource_name = "walk_down"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_rrdxx")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:frame")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1.62451, 1),
"update": 1,
"values": [0, 2, 1]
}

[sub_resource type="Animation" id="Animation_otkof"]
resource_name = "walk_side"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 0.659754, 1.8025),
"update": 1,
"values": [0, 1, 2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_ptdvp")]
}

[sub_resource type="Animation" id="Animation_y53s0"]
resource_name = "walk_up"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_fatym")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:frame")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 0.615572, 1.6245),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ibcr6"]
_data = {
"RESET": SubResource("Animation_0ml67"),
"walk_down": SubResource("Animation_r3n0o"),
"walk_side": SubResource("Animation_otkof"),
"walk_up": SubResource("Animation_y53s0")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gtim8"]
size = Vector2(10.5, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_100va"]
size = Vector2(10, 15)

[node name="Player" type="CharacterBody2D"]
z_index = 10
collision_layer = 8
script = ExtResource("1_b13mb")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ibcr6")
}

[node name="HealthComponent" parent="." instance=ExtResource("2_usdq0")]

[node name="VelocityComponent" parent="." instance=ExtResource("2_skt05")]

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("3_3n47h")]
collision_layer = 0
collision_mask = 2
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(0.75, 0)
shape = SubResource("RectangleShape2D_gtim8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_100va")

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
texture = ExtResource("3_rrdxx")
hframes = 3

[node name="LaunchPosition" type="Node2D" parent="."]
position = Vector2(0, 16)

[node name="ShowInteractable" type="Node2D" parent="."]
visible = false

[node name="ShowInteractableComponent" parent="ShowInteractable" instance=ExtResource("8_hoaqu")]
position = Vector2(13, -14)

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="ItemChangeTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="InvulnerabilityTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
